--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: 3.8
     - name: install requirements
-      run: pip install .
+      run: pip install ".[tests]"
     - name: check formatting
       run: pre-commit run --all-files
   tests:
@@ -36,6 +36,6 @@ jobs:
         python-version: ${{ matrix.pyv }}
     - name: install
       run: |
-        pip install .   
+        pip install ".[tests]"   
     - name: run tests
       run: pytest -v
